<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="320dp"
              android:layout_height="fill_parent"
              android:background="@color/public_bg"
        >
    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="280dp"
            android:layout_height="@dimen/btn_relative"
            android:background="@color/text_white"
            >
        <TextView
                android:text="@string/text_choice_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_black_33"/>
        <ImageView android:layout_width="match_parent" android:layout_height="0.5dip"
                   android:background="@color/line"
                   android:layout_alignParentBottom="true"
                   android:layout_marginTop="5dip"/>
    </RelativeLayout>
    <Button
            android:layout_width="280dp"
            android:layout_height="@dimen/btn_relative"
            android:id="@+id/choose_img"
            android:text="@string/text_local_images"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rl_selector_exit"
            />
    <Button
            android:layout_width="280dp"
            android:layout_height="@dimen/btn_relative"
            android:id="@+id/choose_phone"
            android:text="@string/text_camera"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rl_selector_exit"
            />
    <Button
            android:id="@+id/choose_cancel"
            android:layout_width="280dp"
            android:layout_height="@dimen/btn_relative"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rl_selector_exit"
            />
</LinearLayout>
