<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/public_bg">
    <include layout="@layout/title"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:id="@+id/txt_binding"
                    style="@style/text_login"
                    android:text="@string/text_pwdback_tip"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:paddingBottom="10dip"
                    android:layout_marginTop="@dimen/height_35"
                    android:textSize="@dimen/text_default"
                    />
            <ImageView android:layout_width="match_parent" android:layout_height="0.5dip"
                       android:background="@color/line"
                       android:layout_marginTop="10dip"
                    />
            <EditText
                    android:id="@+id/edt_key"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_relative"
                    android:background="@color/transparent"
                    android:hint="@string/text_emaiphone_hint"
                    android:paddingLeft="10dip"
                    android:textColorHint="@color/text_def"
                    android:textSize="@dimen/text_default"
                    android:textColor="@color/text_black_33"
                    />
            <ImageView android:layout_width="match_parent" android:layout_height="0.5dip"
                       android:background="@color/line"
                    />
            <RelativeLayout
                    android:id="@+id/rl_send"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btn_relative"
                    android:clickable="false"
                    android:layout_marginTop="@dimen/height_35"
                    android:background="@color/text_white"
                    android:gravity="center_vertical|center">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="@dimen/text_default"
                          android:text="@string/text_next"
                          android:textColor="@color/text_def"
                          android:id="@+id/txt_backpwd"
                        />
            </RelativeLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:id="@+id/service_info"
                          android:layout_marginTop="@dimen/height_35"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_small"
                        android:textColor="@color/text_grey_999999"
                        android:text="@string/text_code_tips"
                        android:layout_marginLeft="10dip"
                        />
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:padding="5dip"
                              android:layout_marginLeft="5dip"
                              android:orientation="vertical"
                        >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_small"
                            android:textColor="@color/text_grey_999999"
                            android:text="@string/text_backpwd_tip"
                            />

                </LinearLayout>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_small"
                        android:textColor="@color/text_grey_999999"
                        android:text="@string/text_backpwd_cs_phone"
                        android:layout_marginLeft="10dip"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_small"
                        android:textColor="@color/text_grey_999999"
                        android:text="@string/text_backpwd_cs_email"
                        android:layout_marginLeft="10dip"
                        />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>