<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/userloginroot"
              android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@color/bg_transparent_90"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text="@string/text_choice_login"
            android:textColor="@color/text_black_33"
            android:textSize="18sp"/>
    <ImageView android:layout_width="fill_parent" android:layout_height="0.5dip"
               android:background="@color/line"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/btn_relative"
                  android:orientation="horizontal">

        <Button
                android:id="@+id/ibn_ment_sign"
                android:layout_width="100dp"
                android:layout_height="@dimen/btn_relative"
                android:clickable="true"
                android:background="@drawable/dialog_selector"
                android:textColor="@color/text_blue"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/text_quickgame"
                android:textSize="16sp"/>

        <ImageView android:layout_width="0.5dip" android:layout_height="match_parent"
                   android:background="@color/line"/>

        <Button
                android:id="@+id/ibn_ment_login"
                android:layout_width="100dp"
                android:layout_height="@dimen/btn_relative"
                android:clickable="true"
                android:background="@drawable/dialog_selector"
                android:textColor="@color/text_blue"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/text_registerlogin"
                android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>